Updated description of day 16, introduced AoC library, and performed some minor refactoring